Fixed Bullet Spacing and Text Size

--- a/blocks/references/references.css
+++ b/blocks/references/references.css
@@ -8,7 +8,7 @@
 }
 
 .references ul, ol, li, a {
-  font-size: var(--font-size-14);
+  font-size: var(--font-size-21);
   font-family: var(--sans-serif-font-regular);
   color: var(--neutral-grey-tint140);
 }
